fix weird cropping

--- a/styles/Email.module.css
+++ b/styles/Email.module.css
@@ -94,6 +94,10 @@
   bottom: 20%;
   background-color: var(--accent);
   filter: blur(150px);
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
 }
 
 @media (max-width: 1280px) {
